# openmp-benchmarks

./: CMakeLists.txt  README.md  inputfile
array_init/: CMakeLists.txt  array_init.cpp  array_init.cu  array_init.hip  array_init_cuda_test.cu  array_init_omp_test.cpp  array_init_test.cpp  array_init_test.cu  array_init_test.hip
atomic_capture/: CMakeLists.txt  atomic_capture.cpp  atomic_capture.cu  atomic_capture.hip  atomic_capture_test.cpp  atomic_capture_test.cu  atomic_capture_test.hip
atomic_capture/cuda/: compile_clang  compile_nvcc  run_cuda
atomic_capture/openmp/: compile_clang  compile_nvcpp  run_atomic
atomic_update/: CMakeLists.txt  atomic_update.cpp  atomic_update.cu  atomic_update.hip  atomic_update_test.cpp  atomic_update_test.cu  atomic_update_test.hip
gemm/: CMakeLists.txt  cublas.cu  cublas_test.cu  gemm.cpp  gemm.cu  gemm_test.cpp  gemm_test.cu
include/: common.hpp  cuda_bench.cuh  hip_bench.h  hip_bench.hpp  openmp_bench.h
reduction/: CMakeLists.txt  reduction.cpp  reduction.cu  reduction_test.cpp  reduction_test.cu
saxpy/: CMakeLists.txt  saxpy.cpp  saxpy.cu  saxpy.hip  saxpy_test.cpp  saxpy_test.cu  saxpy_test.hip
src/: CMakeLists.txt  array_init.cpp  array_init.cu  catch_main.cpp  cuda_bench.cu  main.cpp  openmp_bench.cpp  utils.cpp
tests/: CMakeLists.txt  array_init.cpp  array_init.cu  catch_main.cpp  test_main.cpp
